<?xml version="1.0"?>
<package>
  <name>up1_desktop</name>
  <version>0.1.0</version>
  <description>Metapackage for UP1 desktop software.</description>

  <maintainer email="mike@updroid.com">Mike Lewis</maintainer>

  <license>BSD</license>

  <url type="website">http:www.updroid.com</url>
  <url type="bugtracker">https://github.com/updroidinc/up1_desktop/issues</url>
  <url type="repository">https://github.com/updroidinc/up1_desktop</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>up1_viz</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
