<?xml version="1.0"?>
<package>
  <name>husky_viz</name>
  <version>0.1.0</version>
  <description>Package for desktop UP1 visualization.</description>

  <maintainer email="mike@updroid.com">Mike Lewis</maintainer>

  <license>BSD</license>

  <url type="website">http:www.updroid.com</url>
  <url type="bugtracker">https://github.com/updroidinc/up1_desktop/issues</url>
  <url type="repository">https://github.com/updroidinc/up1_desktop</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>up1_description</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
